# Sickleofwheat

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/tcm/sickle/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/utils/: logger.h
app/src/main/java/com/tcm/sickle/: HomeActivity.kt  MainActivity.kt  PlayActivity.kt  RecordActivity.kt  SFApplication.kt  SplashActivity.kt
app/src/main/java/com/tcm/sickle/base/: ActivityLifecycleCallbackImpl.kt  BaseActivity.kt  MainScoped.kt  ScopeActivity.kt
app/src/main/java/com/tcm/sickle/data/: DataUtil.kt  TiktokBean.kt  VideoBean.kt
app/src/main/java/com/tcm/sickle/play/: FFmpegPlayer.kt
app/src/main/java/com/tcm/sickle/ui/home/: HomeFragment.kt  HomeViewModel.kt
app/src/main/java/com/tcm/sickle/ui/home/adapter/: HomeAdapter.kt
app/src/main/java/com/tcm/sickle/ui/main/: RecordFragment.kt  RecordViewModel.kt
app/src/main/java/com/tcm/sickle/ui/mine/: MineFragment.kt  MineViewModel.kt
app/src/main/java/com/tcm/sickle/ui/play/: PlayFragment.kt  PlayViewModel.kt
app/src/main/java/com/tcm/sickle/ui/record/: RecordFragment.kt  RecordViewModel.kt  StartRecordFragment.kt  StartRecordViewModel.kt
app/src/main/java/com/tcm/sickle/utils/: ViewExt.kt
app/src/main/java/com/tcm/sickle/widget/: SFViewPager.kt
app/src/main/res/drawable/: bottom_nav_menu_text_selector.xml  common_btn_bg.xml  edit_bg.xml  ic_home_add.xml  layout_splash.xml
app/src/main/res/layout/: activity_home_avtivity.xml  activity_main.xml  activity_play.xml  activity_record.xml  activity_splash.xml  fragment_home.xml  fragment_main.xml  fragment_mine.xml  fragment_play.xml  fragment_record.xml  fragment_start_record.xml  home_adapter_item.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/tcm/sickle/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
server/: app.js
